Extend transformed to an array not a singleton.
